--- a/web/jsf/home.xhtml
+++ b/web/jsf/home.xhtml
@@ -118,6 +118,9 @@
             <td><b>Description</b></td>
             <td><b>Type</b></td>
             <td><b>Language</b></td>
+            <td><b>Cost</b></td>
+            <td><b>Start date</b></td>
+            <td><b>Finish date</b></td>
             <td><b>Edit</b></td>
         </tr>
         <tbody id="content">
