--- a/web/jsf/index.xhtml
+++ b/web/jsf/index.xhtml
@@ -17,7 +17,7 @@
 </h:head>
 
 <h:body>
-    <a href="/jsf/home.jsf">Click Here To Visit My Home Page!</a>
+    <a href="./jsf/home.jsf">Click Here To Visit My Home Page!</a>
 </h:body>
 
 </html>
